--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   material_design_icons_flutter: ^4.0.5955
   syncfusion_flutter_calendar: ^19.1.66
+  dropdown_search: ^0.6.1
+  rflutter_alert: ^2.0.2
 
 dev_dependencies:
   flutter_test:
