--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   http: ^0.13.3
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
   geolocator: ^6.2.1
+  image_picker: ^0.8.0+4
+  dio: ^4.0.0
+
 
 
 
